<resources>
    <string name="app_name">Tour Naija2</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="stadiums">Stadiums</string>
    <string name="museums">Museums</string>
    <string name="description">Description</string>
    <string name="place_image">Place image</string>
    <string name="title_mall_list">Malls</string>
    <string name="title_mall_detail">Mall Detail</string>
    <string name="malls">Malls</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
